--- a/index.html
+++ b/index.html
@@ -1480,7 +1480,7 @@
       }
 
       div#n2-ss-9 .n-uc-15d18cbc54ce6-inner {
-        background-color: #114B94;
+        background-color: #2f9411;
         border-width: 2px 2px 2px 2px;
         border-style: solid;
         border-color: RGBA(255, 255, 255, 1);
@@ -1538,7 +1538,7 @@
       }
 
       div#n2-ss-9 .n-uc-107eca056a898-inner {
-        background-color: #114B94;
+        background-color: #2f9411;
         border-width: 2px 2px 2px 2px;
         border-style: solid;
         border-color: RGBA(255, 255, 255, 1);
@@ -1564,7 +1564,7 @@
       }
 
       div#n2-ss-9 .n-uc-11ae2b90516cb-inner {
-        background-color: #114B94;
+        background-color: #2f9411;
         border-width: 2px 2px 2px 2px;
         border-style: solid;
         border-color: RGBA(255, 255, 255, 1);
@@ -1590,7 +1590,7 @@
       }
 
       div#n2-ss-9 .n-uc-1b4f0fe5cdbad-inner {
-        background-color: #114B94;
+        background-color: #2f9411;
         border-width: 2px 2px 2px 2px;
         border-style: solid;
         border-color: RGBA(255, 255, 255, 1);
@@ -1991,7 +1991,7 @@
       }
 
       div#n2-ss-10 .n-uc-15e8dda174924-inner {
-        background-color: #114B94;
+        background-color: #2f9411;
         border-radius: 10px;
         box-shadow: 0px 0px 7px 0px RGBA(0, 0, 0, 0.5);
         border-width: 0px 0px 0px 0px;
@@ -4044,14 +4044,14 @@
                                 data-title="Slide"
                                 class="n2-ss-slide n2-ow n2-ss-slide-7"
                                 style="
-                                  background-color: #114b94;
+                                  background-color: #2f9411;
 
                                   background-repeat: no-repeat;
                                   background-position: bottom left;
                                 "
                               >
                                 <!-- style="
-                              background-color: #114b94;
+                              background-color: #2f9411;
                               background-image: url(/images/Picsart_24-06-20_05-09-24-679.png);
                               background-repeat: no-repeat;
                               background-position: bottom left;
@@ -4087,7 +4087,7 @@
                                         >
                                           <div
                                             class="n2-ss-layer-row n2-ss-layer-with-background n-uc-103823df79529-inner"
-                                            style="background-color: #114b94"
+                                            style="background-color: #2f9411"
                                           >
                                             <div class="n2-ss-layer-row-inner">
                                               <div
@@ -4657,7 +4657,7 @@
                                 data-slide-public-id="1"
                                 data-title="Slide"
                                 class="n2-ss-slide n2-ow n2-ss-slide-8"
-                                style="background-color: #114b94"
+                                style="background-color: #2f9411"
                               >
                                 <div
                                   role="note"
@@ -4907,7 +4907,7 @@
                                 data-slide-public-id="1"
                                 data-title="Slide"
                                 class="n2-ss-slide n2-ow n2-ss-slide-9"
-                                style="background-color: #114b94"
+                                style="background-color: #2f9411"
                               >
                                 <div
                                   role="note"
@@ -5321,7 +5321,7 @@
                                 data-slide-public-id="1"
                                 data-title="Slide"
                                 class="n2-ss-slide n2-ow n2-ss-slide-10"
-                                style="background-color: #114b94"
+                                style="background-color: #2f9411"
                               >
                                 <div
                                   role="note"
@@ -5510,7 +5510,7 @@
                               >
                                 <div
                                   data-color="RGBA(32,31,37,1)"
-                                  style="background-color: #114b94"
+                                  style="background-color: #2f9411"
                                   class="n2-ss-slide-background-color"
                                   data-overlay="1"
                                 ></div>
@@ -5529,7 +5529,7 @@
                                 data-id="12"
                                 data-slide-public-id="1"
                                 data-title="Slide"
-                                style="background-color: #114b94"
+                                style="background-color: #2f9411"
                                 class="n2-ss-slide n2-ow n2-ss-slide-12"
                               >
                                 <div
