--- a/index.html
+++ b/index.html
@@ -4258,7 +4258,7 @@
                                                           color: #fff;
                                                         "
                                                         onclick='n2ss.scroll(event, "element", "[data-alias=\"howtobuy\"]");'
-                                                        href="buylink"
+                                                        href="https://app.uniswap.org/explore/tokens/ethereum/0x6135c02c4dd79a59a29a5a9af83fd6b439cfa23f"
                                                         >Buy $PEPE6135</a
                                                       >
                                                     </div>
@@ -4291,7 +4291,7 @@
                                                           display: block;
                                                           color: #fff;
                                                         "
-                                                        href="chartlink"
+                                                        href="https://www.dextools.io/app/en/ether/pair-explorer/0xa4b8223d9291497296f0c3bfe086011a78b799e2?t=1720638004669"
                                                         >Chart</a
                                                       >
                                                     </div>
@@ -4454,7 +4454,7 @@
                                                                 class="n2-ss-item-image-content n2-ss-item-content n2-ow-all"
                                                               >
                                                                 <a
-                                                                  href="buylink"
+                                                                  href="https://app.uniswap.org/explore/tokens/ethereum/0x6135c02c4dd79a59a29a5a9af83fd6b439cfa23f"
                                                                   ><img
                                                                     id="n2-ss-7item13"
                                                                     alt
@@ -4485,7 +4485,7 @@
                                                                 class="n2-ss-item-image-content n2-ss-item-content n2-ow-all"
                                                               >
                                                                 <a
-                                                                  href="chartlink"
+                                                                  href="https://www.dextools.io/app/en/ether/pair-explorer/0xa4b8223d9291497296f0c3bfe086011a78b799e2?t=1720638004669"
                                                                   ><img
                                                                     id="n2-ss-7item14"
                                                                     alt
@@ -4516,7 +4516,7 @@
                                                                 class="n2-ss-item-image-content n2-ss-item-content n2-ow-all"
                                                               >
                                                                 <a
-                                                                  href="https://etherscan.io/token/0x0000000000000000000000000000"
+                                                                  href="https://etherscan.io/token/0x6135C02C4DD79a59A29a5a9aF83FD6B439CfA23f"
                                                                   ><img
                                                                     id="n2-ss-7item15"
                                                                     alt
@@ -4549,7 +4549,7 @@
                                                       "
                                                     >
                                                       CA :
-                                                      0x0000000000000000000000000000
+                                                      0x6135C02C4DD79a59A29a5a9aF83FD6B439CfA23f
                                                     </div>
                                                   </div>
                                                 </div>
@@ -4837,7 +4837,7 @@
                                                   >
                                                     Contract Address:
                                                     <br /><br />
-                                                    0x0000000000000000000000000000
+                                                    0x6135C02C4DD79a59A29a5a9aF83FD6B439CfA23f
                                                   </div>
                                                 </div>
                                               </div>
